made a few changes

--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@
                     <h3 class="title title_small timeline__title">Student Mentor</h3>
                     <div class="timeline__description">
                         <p>Assist new students and help them understand the fundamentals of Front-End developement.<br>
-                         Socialize with casino and players to make sure everyone is having a good time. <br>
-                         Trained new hires and teach them the rules and regulations. <br>
-                         Acting supervisor when they go on break, lunch, or meetings.</p>
+                           The course covers languages and frameworks such as, HTML5, CSS3, JavaScript,              
+                           jQuery, Bootstrap, API's, JSON, AJAX, and AngularJS.<br>
+                           </p>
                     </div>
                 </article>
             </div>  
