--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel="icon" href="favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="css/main.css" type="text/css"/>
-<link href="https://fonts.googleapis.com/css?family=Raleway:400,300,700" rel="stylesheet" type="text/css"/>
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,300,700" rel="stylesheet" type="text/css"/>
 </head>
 <body id="welcome_active">
     <header id="welcome" class="header header_no-bg box_blur display_js">
