fixed video, made portfolio better

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="welcome">
             <h1 class="welcome__header">
                 <span class="welcome__name layer" data-show-effect="fadeInDown" data-show-delay="500">Bill Hoang</span>
-                <span class="welcome__label layer" data-show-effect="fadeInUp" data-show-delay="500">Front-End Developer from Bay Area, CA</span>
+                <span class="welcome__label layer" data-show-effect="fadeInUp" data-show-delay="500">Front End Developer Bay Area, CA</span>
             </h1>
             <div class="welcome__footer">
                 <a href="resume.docx" class="welcome__link layer" data-show-effect="fadeInUp" data-show-delay="1000">download resume</a>
