--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
             <div class="timeline__layout">
                 <div class="timeline__dotted layer" data-show-effect="zoomIn" data-show-delay="1300" data-time="300"></div>
                 <div class="timeline__inner timeline__time layer" data-show-effect="fadeIn" data-show-delay="1700">
-                    <span class="timeline__date">2008</span>
+                    <span class="timeline__date">Sept.2008-Jan.2010</span>
                     <span class="timeline__place-work">College</span>
                 </div>
                 <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1800" >
@@ -393,7 +393,7 @@
 	<div class="nav-panel__content">
 		<nav class="nav nav-panel__layout">
 			<a href="#welcome" class="nav-panel__link init-scroll_js" data-scroll-nav="0" data-id-section="welcome"><i class="icon icon-home nav-panel__icon"></i>Home</a>
-			<a href="#portfolio" class="nav-panel__link init-scroll_js" data-scroll-nav="1" data-id-section="portfolio"><i class="icon icon-user nav-panel__icon "></i>portfolio</a>
+			<a href="#portfolio" class="nav-panel__link init-scroll_js" data-scroll-nav="1" data-id-section="portfolio"><i class="icon icon-user nav-panel__icon "></i>Portfolio</a>
 			<a href="#about" class="nav-panel__link init-scroll_js" data-scroll-nav="2" data-id-section="about"><i class="icon icon-skills nav-panel__icon"></i>About Me</a>
 			<!-- <a href="#skills" class="nav-panel__link init-scroll_js" data-scroll-nav="3" data-id-section="skills"><i class="icon icon-diamond nav-panel__icon"></i>Skills</a> -->
 			<a href="#experience" class="nav-panel__link init-scroll_js" data-scroll-nav="3" data-id-section="experience"><i class="icon icon-th nav-panel__icon"></i>Experience</a>
