--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header id="welcome" class="header header_no-bg box_blur display_js">
         <div class="main-container main-container_fullheight">
             <div class="fullscreen-bg">
-                <video loop muted autoplay class="fullscreen-bg__video">
+                <video loop muted autoplay class="responsive-video">
                     <source src="video.mp4">
             </div>
             <div class="welcome">
@@ -648,8 +648,8 @@
     <script async src="js/plugins/layerPopup.min.js"></script>
     <script async src="js/plugins/magicLayout.min.js"></script>
     <script async src="js/main.js"></script>
-    <!-- <script src="js/plugins/jquery.youtubebackground.min.js"></script>
-<script>
+    <script src="js/plugins/jquery.youtubebackground.min.js"></script>
+<!-- <script>
 (function($){
 
     $("#welcome").YTPlayer({
@@ -658,9 +658,9 @@
     });
 
 })(jQuery);
-</script>
+</script> -->
 
- -->
+
 </body>
 
 </html>
