made some changes

--- a/index.html
+++ b/index.html
@@ -269,46 +269,46 @@
                     <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1000">
                         <h3 class="title title_small timeline__title">Student Mentor</h3>
                         <div class="timeline__description">
-                            <p>Assist new students and help them understand the fundamentals of Front-End developement.
-                                <br> The course covers languages and frameworks such as, HTML5, CSS3, JavaScript, jQuery, Bootstrap, API's, JSON, AJAX, and AngularJS.
+                            <p>-Assist new students and help them understand the fundamentals of Front-End developement.
+                                <br> -Course covers languages and frameworks such as, HTML5, CSS3, JavaScript, jQuery, Bootstrap, API's, JSON, AJAX, 
+                                 &nbsp;&nbsp;and AngularJS.
+                                <br> -Help students with critical thinking and intense problem solving
+                                <br> -Learn to ways to approach new tasks
                                 <br>
                             </p>
                         </div>
                     </article>
                 </div>
-                <div class="timeline__layout">
+                <!-- <div class="timeline__layout">
                     <div class="timeline__dotted layer" data-show-effect="zoomIn" data-show-delay="700" data-time="300"></div>
                     <div class="timeline__inner timeline__time layer" data-show-effect="fadeIn" data-show-delay="1100">
-                        <span class="timeline__date">0ct 2017 - present</span>
-                        <span class="timeline__place-work">Freelancer</span>
+                        <span class="timeline__date">0ct 2016 - present</span>
+                        <span class="timeline__place-work">r</span>
                     </div>
                     <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1200">
                         <h3 class="title title_small timeline__title">Web Developer</h3>
                         <div class="timeline__description">
                             <p>Using media queries and bootstrap to make responsive designs websites and applications
-                                <br> jQuery to make applications, converting raw Javascript to jQuery
-                                <br> CSS to add next level designs to websites and applications
                                 <br> Javascript to develope applications
+                                <br> Css to add color and styles to websites
                                 <br> Design and maintenance websites
-                                <br> Learn to ways to approach new tasks
-                                <br> Critical thinking and intense problem solving
                             </p>
                         </div>
                     </article>
-                </div>
+                </div> -->
                 <div class="timeline__layout">
                     <div class="timeline__dotted layer" data-show-effect="zoomIn" data-show-delay="900" data-time="300"></div>
                     <div class="timeline__inner timeline__time  layer" data-show-effect="fadeIn" data-show-delay="1300">
                         <span class="timeline__date">Nov 2016 - present</span>
                         <span class="timeline__place-work">devbybill</span>
                     </div>
-                    <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1400">
+                    <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1200">
                         <h3 class="title title_small timeline__title">Web Developer</h3>
                         <div class="timeline__description">
-                            <p>Build and maintain website using resposive designs
-                                <br> scss to add color and styles to websites
-                                <br> Javascript to make parts of the site run
-                                <br> jQuery to add plug-ins and shorten codes
+                            <p>-Build and maintain website using resposive designs
+                                <br> -CSS to add next level designs to websites and applications
+                                <br> -Javascript to make parts of the site function
+                                <br> -jQuery to make applications, converting raw Javascript to jQuery vice versa
                                 <br>
                             </p>
                         </div>
@@ -320,16 +320,16 @@
                         <span class="timeline__date">Sept.2016 - Jan.2017</span>
                         <span class="timeline__place-work">Codify Academy</span>
                     </div>
-                    <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1600">
+                    <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1400">
                         <h3 class="title title_small timeline__title">Front-End developer</h3>
                         <div class="timeline__description">
-                            <p>16 week Front-End Developer training program
-                                <br> Each week we had to build a couple of projects based on what we learned
-                                <br> Started witht the basics like CSS and HTML, then we advanced to Javascript, JQuery, Angular, Bootstrap, etc. </p>
+                            <p>-16 week Front-End Developer training program
+                                <br> -Each week we had to build a couple of projects based on what we learned
+                                <br> -Started witht the basics like CSS and HTML, then we advanced to Javascript, JQuery, Angular, Bootstrap, etc. </p>
                         </div>
                     </article>
                 </div>
-                <div class="timeline__layout">
+<!--                 <div class="timeline__layout">
                     <div class="timeline__dotted layer" data-show-effect="zoomIn" data-show-delay="1300" data-time="300"></div>
                     <div class="timeline__inner timeline__time layer" data-show-effect="fadeIn" data-show-delay="1700">
                         <span class="timeline__date">Sept.2008-Jan.2010</span>
@@ -343,7 +343,7 @@
                     </article>
                 </div>
             </div>
-        </div>
+        </div>-->
     </section>
     <footer class="footer">
         <div class="main-container">
