cleaned up some codes, deleted extra

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,700" rel="stylesheet" type="text/css" />
 </head>
-                  
+
 <body id="welcome_active">
     <header id="welcome" class="header header_no-bg box_blur display_js">
         <div class="main-container main-container_fullheight">
@@ -186,62 +186,70 @@
                 <div class="skills__column skills-bar">
                     <div class="skills-bar__item">
                         <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="400" data-skill-bar-width="">
-                            <div class="skill layer" data-show-effect="fadeIn" data-show-delay="1400">
+                            <div class="skill layer" data-show-effect="fadeIn" data-show-delay="400">
                                 <span class="skill__name">CSS & HTML</span>
                                 <span class="skill__value skill__value_js"></span>
                             </div>
                         </div>
                     </div>
                     <div class="skills-bar__item">
-                        <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="400" data-skill-bar-width="">
-                            <div class="skill layer" data-show-effect="fadeIn" data-show-delay="1400">
+                        <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="600" data-skill-bar-width="">
+                            <div class="skill layer" data-show-effect="fadeIn" data-show-delay="600">
                                 <span class="skill__name">Git & Github</span>
                                 <span class="skill__value skill__value_js"></span>
                             </div>
                         </div>
                     </div>
                     <div class="skills-bar__item">
-                        <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="400" data-skill-bar-width="">
-                            <div class="skill layer" data-show-effect="fadeIn" data-show-delay="1400">
+                        <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="800" data-skill-bar-width="">
+                            <div class="skill layer" data-show-effect="fadeIn" data-show-delay="800">
                                 <span class="skill__name">Bootstrap & Responsive Designs</span>
                                 <span class="skill__value skill__value_js"></span>
                             </div>
                         </div>
                     </div>
                     <div class="skills-bar__item">
-                        <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="600" data-skill-bar-width="">
-                            <div class="skill layer" data-show-effect="fadeIn" data-show-delay="1600">
+                        <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="1000" data-skill-bar-width="">
+                            <div class="skill layer" data-show-effect="fadeIn" data-show-delay="1000">
                                 <span class="skill__name">JavaScript</span>
                                 <span class="skill__value skill__value_js"></span>
                             </div>
                         </div>
                     </div>
                     <div class="skills-bar__item">
-                        <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="800" data-skill-bar-width="">
-                            <div class="skill layer" data-show-effect="fadeIn" data-show-delay="1800">
+                        <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="1200" data-skill-bar-width="">
+                            <div class="skill layer" data-show-effect="fadeIn" data-show-delay="1200">
                                 <span class="skill__name">jQuery</span>
                                 <span class="skill__value skill__value_js"></span>
                             </div>
                         </div>
                     </div>
                     <div class="skills-bar__item">
-                        <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="800" data-skill-bar-width="">
-                            <div class="skill layer" data-show-effect="fadeIn" data-show-delay="1800">
+                        <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="1400" data-skill-bar-width="">
+                            <div class="skill layer" data-show-effect="fadeIn" data-show-delay="1400">
                                 <span class="skill__name">AJAX & JSON</span>
                                 <span class="skill__value skill__value_js"></span>
                             </div>
                         </div>
                     </div>
                     <div class="skills-bar__item">
-                        <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="800" data-skill-bar-width="">
-                            <div class="skill layer" data-show-effect="fadeIn" data-show-delay="1800">
+                        <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="1600" data-skill-bar-width="">
+                            <div class="skill layer" data-show-effect="fadeIn" data-show-delay="1600">
                                 <span class="skill__name">Google API's</span>
                                 <span class="skill__value skill__value_js"></span>
                             </div>
                         </div>
                     </div>
                     <div class="skills-bar__item">
-                        <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="1000" data-skill-bar-width="">
+                        <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="1800" data-skill-bar-width="">
+                            <div class="skill layer" data-show-effect="fadeIn" data-show-delay="1800">
+                                <span class="skill__name">Data Structure & Algorithmn</span>
+                                <span class="skill__value skill__value_js"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skills-bar__item">
+                        <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="2000" data-skill-bar-width="">
                             <div class="skill layer" data-show-effect="fadeIn" data-show-delay="2000">
                                 <span class="skill__name">Angular</span>
                                 <span class="skill__value skill__value_js"></span>
@@ -270,8 +278,7 @@
                         <h3 class="title title_small timeline__title">Student Mentor</h3>
                         <div class="timeline__description">
                             <p>-Assist new students and help them understand the fundamentals of Front-End developement.
-                                <br> -Course covers languages and frameworks such as, HTML5, CSS3, JavaScript, jQuery, Bootstrap, API's, JSON, AJAX, 
-                                 &nbsp;&nbsp;and AngularJS.
+                                <br> -Course covers languages and frameworks such as, HTML5, CSS3, JavaScript, jQuery, Bootstrap, API's, JSON, AJAX, &nbsp;&nbsp;and AngularJS.
                                 <br> -Help students with critical thinking and intense problem solving
                                 <br> -Learn to ways to approach new tasks
                                 <br>
@@ -279,23 +286,6 @@
                         </div>
                     </article>
                 </div>
-                <!-- <div class="timeline__layout">
-                    <div class="timeline__dotted layer" data-show-effect="zoomIn" data-show-delay="700" data-time="300"></div>
-                    <div class="timeline__inner timeline__time layer" data-show-effect="fadeIn" data-show-delay="1100">
-                        <span class="timeline__date">0ct 2016 - present</span>
-                        <span class="timeline__place-work">r</span>
-                    </div>
-                    <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1200">
-                        <h3 class="title title_small timeline__title">Web Developer</h3>
-                        <div class="timeline__description">
-                            <p>Using media queries and bootstrap to make responsive designs websites and applications
-                                <br> Javascript to develope applications
-                                <br> Css to add color and styles to websites
-                                <br> Design and maintenance websites
-                            </p>
-                        </div>
-                    </article>
-                </div> -->
                 <div class="timeline__layout">
                     <div class="timeline__dotted layer" data-show-effect="zoomIn" data-show-delay="900" data-time="300"></div>
                     <div class="timeline__inner timeline__time  layer" data-show-effect="fadeIn" data-show-delay="1300">
@@ -329,21 +319,6 @@
                         </div>
                     </article>
                 </div>
-<!--                 <div class="timeline__layout">
-                    <div class="timeline__dotted layer" data-show-effect="zoomIn" data-show-delay="1300" data-time="300"></div>
-                    <div class="timeline__inner timeline__time layer" data-show-effect="fadeIn" data-show-delay="1700">
-                        <span class="timeline__date">Sept.2008-Jan.2010</span>
-                        <span class="timeline__place-work">College</span>
-                    </div>
-                    <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1800">
-                        <h3 class="title title_small timeline__title">Community College</h3>
-                        <div class="timeline__description">
-                            <p>Computer Science, General Education, Communication, Mathematics</p>
-                        </div>
-                    </article>
-                </div>
-            </div>
-        </div>-->
     </section>
     <footer class="footer">
         <div class="main-container">
@@ -381,7 +356,6 @@
                 <a href="#welcome" class="nav-panel__link init-scroll_js" data-scroll-nav="0" data-id-section="welcome"><i class="icon icon-home nav-panel__icon"></i>Home</a>
                 <a href="#portfolio" class="nav-panel__link init-scroll_js" data-scroll-nav="1" data-id-section="portfolio"><i class="icon icon-user nav-panel__icon "></i>Portfolio</a>
                 <a href="#about" class="nav-panel__link init-scroll_js" data-scroll-nav="2" data-id-section="about"><i class="icon icon-skills nav-panel__icon"></i>About Me</a>
-                <!-- <a href="#skills" class="nav-panel__link init-scroll_js" data-scroll-nav="3" data-id-section="skills"><i class="icon icon-diamond nav-panel__icon"></i>Skills</a> -->
                 <a href="#experience" class="nav-panel__link init-scroll_js" data-scroll-nav="3" data-id-section="experience"><i class="icon icon-th nav-panel__icon"></i>Experience</a>
         </div>
     </div>
@@ -648,19 +622,6 @@
     <script async src="js/plugins/layerPopup.min.js"></script>
     <script async src="js/plugins/magicLayout.min.js"></script>
     <script async src="js/main.js"></script>
-    <script src="js/plugins/jquery.youtubebackground.min.js"></script>
-<!-- <script>
-(function($){
-
-    $("#welcome").YTPlayer({
-        videoId: "dhe2oaNeimk",
-        pauseOnScroll: true
-    });
-
-})(jQuery);
-</script> -->
-
-
 </body>
 
 </html>
