fixed some typos

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="list-works__overlay">
                         <span class="list-works__name-project list-works__name-project_fade">Tictactoe</span>
-                        <span class="list-works__link-project">Play!!</span>
+                        <span class="list-works__link-project">Play</span>
                     </div>
                 </a>
                 <a href="Projects/jquerymobileapp/index.html" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="500" data-id="pan">
@@ -76,7 +76,7 @@
                         <img src="img/runtracker1.jpg" class="responsive-img1" alt="run tracker app" />
                     </div>
                     <div class="list-works__overlay">
-                        <span class="list-works__name-project list-works__name-project_fade">Track Your Runs!</span>
+                        <span class="list-works__name-project list-works__name-project_fade">Track Your Runs</span>
                         <span class="list-works__link-project">Track Runs</span>
                     </div>
                 </a>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="list-works__overlay">
                         <span class="list-works__name-project list-works__name-project_fade">Goku Portfolio</span>
-                        <span class="list-works__link-project">World' Greatest Fighter</span>
+                        <span class="list-works__link-project">World's Greatest Fighter</span>
                     </div>
                 </a>
                 <a href="Projects/quizapp/index.html" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="900" data-id="ml">
